update shipping info

--- a/obo-stadium/css/components/buying/buying-section.css
+++ b/obo-stadium/css/components/buying/buying-section.css
@@ -31,17 +31,6 @@
   border-radius: 0.25rem;
 }
 
-.radio-wrapper {
-  margin-top: 1.25rem;
-}
-.radio-wrapper label {
-  margin: 0px;
-  line-height: 1.1875rem;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-}
-
 .payment-methods {
   margin-top: 1.875rem;
 }
@@ -77,6 +66,60 @@
 
   .buying .title {
     font-size: 1.25rem;
+  }
+}
+#addNewShipping .modal-header,
+#addNewShipping .modal-body,
+#addNewShipping .modal-footer {
+  padding: 1.875rem;
+  padding-bottom: 0px;
+}
+#addNewShipping .modal-header,
+#addNewShipping .modal-footer {
+  border: 0px;
+}
+#addNewShipping .modal-footer {
+  padding-bottom: 1.875rem;
+}
+#addNewShipping .nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+}
+#addNewShipping .nav-link {
+  border-radius: 0px;
+  background-color: #D5D6D6;
+  text-align: center;
+  padding: 1.25rem 0px;
+  text-transform: uppercase;
+}
+#addNewShipping .nav-link.active {
+  background-color: white;
+  color: #333333;
+}
+#addNewShipping .tab-pane {
+  margin: 1.25rem 1.875rem;
+}
+#addNewShipping .form-control,
+#addNewShipping .custom-select {
+  margin-top: 1.25rem;
+}
+#addNewShipping .form-control:first-child {
+  margin-top: 0px;
+}
+#addNewShipping .make-default-wrapper {
+  margin-top: 1.25rem;
+}
+#addNewShipping .btn {
+  padding: 0.625rem 3.125rem;
+}
+#addNewShipping .address {
+  resize: none;
+}
+
+@media (min-width: 576px) {
+  .modal-dialog {
+    max-width: 420px;
   }
 }
 
