--- a/obo-stadium/css/main.css
+++ b/obo-stadium/css/main.css
@@ -22,6 +22,11 @@ a:hover {
   color: inherit;
 }
 
+.custom-select:focus {
+  border-color: #333333;
+  box-shadow: none;
+}
+
 .trans-btn {
   color: #333333 !important;
   background-color: white !important;
