--- a/obo-stadium/template/template-parts/shipping-info.pug
+++ b/obo-stadium/template/template-parts/shipping-info.pug
@@ -1,17 +1,32 @@
-#exampleModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='exampleModalLabel', aria-hidden='true')
+#addNewShipping.modal.fade(tabindex='-1', role='dialog', aria-labelledby='addNewShippingLabel', aria-hidden='true')
   .modal-dialog(role='document')
     .modal-content
       .modal-header
-        h5#exampleModalLabel.modal-title Thêm địa chỉ mới
+        h5#addNewShippingLabel.modal-title Thêm địa chỉ mới
         button.close(type='button', data-dismiss='modal', aria-label='Close')
           span(aria-hidden='true') &times;
-      .modal-body
-        input.form-control.full-name(placeholder="Họ và tên")
-        input.form-control.phone(placeholder="Số điện thoại")
-        input.form-control.email(placeholder="Email")
-        input.form-control.password(placeholder="Mật khẩu")
-        input.form-control.password(placeholder="Xác nhận mật khẩu")
-        .privacy-confirm
+      form.modal-body
+        input.form-control.full-name(placeholder="Họ và tên" data-name="Họ và tên")
+        .invalid-feedback 
+        input.form-control.phone(placeholder="Số điện thoại" data-name="Số điện thoại")
+        .invalid-feedback 
+        select.custom-select.city(data-name="Thành phố")
+        .invalid-feedback 
+        select.custom-select.district(data-name="Quận/Huyện")
+          option Quận/Huyện
+        .invalid-feedback 
+        select.custom-select.ward(data-name="Phường/Xã")
+          option Phường/Xã
+        .invalid-feedback 
+        textarea.form-control.address(placeholder="Địa chỉ" data-name="Địa chỉ")
+        .invalid-feedback 
+        .make-default-wrapper
+          .pretty.p-svg.p-curve
+                  input.filter-checkbox(type='checkbox' name='make-default' id='make-default /')
+                  .state.p-success
+                    svg.svg.svg-icon(viewbox='0 0 20 20')
+                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+                    label.checkbox-label(for='make-default') Đặt làm địa chỉ mặc định
       .modal-footer
-        button.btn.btn-secondary(type='button', data-dismiss='modal') Close
-        button.btn.btn-primary(type='button') Save changes
+        button.btn(type='button', data-dismiss='modal') Huỷ bỏ
+        button.btn.btn-primary.red-btn.save(type='button') Lưu
