--- a/obo-stadium/template/template-parts/left-sidebar-account.pug
+++ b/obo-stadium/template/template-parts/left-sidebar-account.pug
@@ -11,3 +11,4 @@
     a.buying-order.nav-item(href='./buying-order.html') Đơn hàng mua
     a.selling-buying-products.nav-item Đơn hàng bán
     a.account.nav-item(href="./account.html") Quản lý tài khoản
+    a.btn.btn-primary.red-btn.sign-out-btn(href="./index.html") Đăng xuất
