--- a/obo-stadium/template/template-parts/login-modal.pug
+++ b/obo-stadium/template/template-parts/login-modal.pug
@@ -11,20 +11,28 @@
       .modal-body
         #pills-tabContent.tab-content
           #signIn.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='signIn-tab')
-            input.form-control.email(placeholder="Email")
-            input.form-control.password(placeholder="Mật khẩu")
-            .forgot-password-wrapper
-            | Quên mật khẩu? Nhấn vào 
-            span.text-btn đây
-            .btn.btn-primary.red-btn.sign-in-btn Đăng nhập
+            form
+              input.form-control.sign-in-email(placeholder="Email")
+              .invalid-feedback 
+              input.form-control.sign-in-password(type="password" placeholder="Mật khẩu")
+              .invalid-feedback 
+              .forgot-password-wrapper
+              | Quên mật khẩu? Nhấn vào 
+              span.text-btn đây
+              .btn.btn-primary.red-btn.sign-in-btn Đăng nhập
 
           #signUp.tab-pane.fade(role='tabpanel', aria-labelledby='signUp-tab')
-            input.form-control.full-name(placeholder="Họ và tên")
-            input.form-control.phone(placeholder="Số điện thoại")
-            input.form-control.email(placeholder="Email")
-            input.form-control.password(placeholder="Mật khẩu")
-            input.form-control.password(placeholder="Xác nhận mật khẩu")
-            .privacy-confirm
-            | Khi bạn nhấn Đăng ký, bạn đã đồng ý thực hiện mọi giao dịch mua bán theo 
-            span.text-btn điều kiện sử dụng và chính sách của OBO Stadium.
-            .btn.btn-primary.red-btn.sign-up-btn Đăng kí
+            form
+              .invalid-feedback 
+              input.form-control.phone(placeholder="Số điện thoại *")
+              .invalid-feedback 
+              input.form-control.email(placeholder="Email *")
+              .invalid-feedback 
+              input.form-control.password(type="password" placeholder="Mật khẩu *")
+              .invalid-feedback 
+              input.form-control.confirm-password(type="password" placeholder="Xác nhận mật khẩu *")
+              .invalid-feedback 
+              .privacy-confirm
+              | Khi bạn nhấn Đăng ký, bạn đã đồng ý thực hiện mọi giao dịch mua bán theo 
+              span.text-btn điều kiện sử dụng và chính sách của OBO Stadium.
+              .btn.btn-primary.red-btn.sign-up-btn Đăng kí
