update display account menu item

--- a/obo-stadium/template/template-parts/login-modal.pug
+++ b/obo-stadium/template/template-parts/login-modal.pug
@@ -1,16 +1,16 @@
-#signInSignUp.modal.fade(tabindex='-1', role='dialog', aria-labelledby='signInSignUpLabel', aria-hidden='true')
+#signInSignUp.modal.fade(tabindex='-1' role='dialog' aria-labelledby='signInSignUpLabel' aria-hidden='true')
   .modal-dialog(role='document')
     .modal-content
       .modal-header
         ul#pills-tab.nav.nav-pills(role='tablist')
           li.nav-item
-            a#signIn-tab.nav-link.active(data-toggle='pill', href='#signIn', role='tab', aria-controls='signIn', aria-selected='true') Đăng nhập
+            a#signIn-tab.nav-link.active(data-toggle='pill' href='#signIn' role='tab' aria-controls='signIn' aria-selected='true') Đăng nhập
           li.nav-item
-            a#signUp-tab.nav-link(data-toggle='pill', href='#signUp', role='tab', aria-controls='signUp', aria-selected='false') Đăng ký
+            a#signUp-tab.nav-link(data-toggle='pill' href='#signUp' role='tab' aria-controls='signUp' aria-selected='false') Đăng ký
 
       .modal-body
         #pills-tabContent.tab-content
-          #signIn.tab-pane.fade.show.active(role='tabpanel', aria-labelledby='signIn-tab')
+          #signIn.tab-pane.fade.show.active(role='tabpanel' aria-labelledby='signIn-tab')
             form
               input.form-control.sign-in-email(placeholder="Email")
               .invalid-feedback 
@@ -21,8 +21,9 @@
               span.text-btn đây
               .btn.btn-primary.red-btn.sign-in-btn Đăng nhập
 
-          #signUp.tab-pane.fade(role='tabpanel', aria-labelledby='signUp-tab')
+          #signUp.tab-pane.fade(role='tabpanel' aria-labelledby='signUp-tab')
             form
+              input.form-control.full-name(placeholder="Họ và tên *")
               .invalid-feedback 
               input.form-control.phone(placeholder="Số điện thoại *")
               .invalid-feedback 
