--- a/obo-stadium/template/buy-page.pug
+++ b/obo-stadium/template/buy-page.pug
@@ -4,11 +4,12 @@ block customizeCss
   // Components CSS
   link(rel='stylesheet' type='text/css' href='./css/components/header.css')
   link(rel='stylesheet' type='text/css' href='./css/components/buying/product-info.css')
-  link(rel='stylesheet' type='text/css' href='./css/components/buying/buying-section.css')
+  
   link(rel='stylesheet' type='text/css' href='./css/components/buying/pricing.css')
   link(rel='stylesheet' type='text/css' href='./css/components/buying/shipping-info.css')
   
   link(rel="stylesheet" type="text/css" href="./css/components/product-details/size-choose.css")
+  link(rel='stylesheet' type='text/css' href='./css/components/buying/buying-section.css')
   link(rel="stylesheet" type="text/css" href="./css/components/product-details/size-guide-table.css")
   link(rel="stylesheet" type="text/css" href="./css/components/input-radio.css")
   
@@ -52,15 +53,22 @@ block mainContent
           .header
             .title Địa chỉ nhận hàng
             button.btn.btn-primary.change.red-btn Thay đổi
-          .info-wrapper.radio-wrapper
-            input#address-info.address-radio-btn(type='radio' name='address-info' checked='')
-            label(for='address-info')
-              .radio-dot
-              div
-                .name-phone
-                  b Cody
-                  |  | 036530xxxx
-                .address 48 Tố Hữu, Lê Văn Lương kéo dài, Từ Liêm, Hà Nội
+          .info-wrapper
+            .info-choose.radio-wrapper
+              input#default-address.address-radio-btn(type='radio' name='address-info' checked='')
+              label(for='default-address')
+                .radio-dot
+                div.shipping-data
+                  .name-phone
+                    span.shipping-name
+                      b Cody
+                    |  | 
+                    span.shipping-phone 036530xxxx
+                  .address
+                    span.shipping-adress 13 Ngõ Thổ Quan, 
+                    span.shipping-ward Phường Thổ Quan, 
+                    span.shipping-district Quận Đống Đa, 
+                    span.shipping-city Hà Nội
           .btns
             button.btn.btn-primary.complete.red-btn Hoàn thành
             button.btn.btn-primary.cancel.trans-btn Trở lại
