--- a/obo-stadium/template/template-parts/index-header.pug
+++ b/obo-stadium/template/template-parts/index-header.pug
@@ -11,7 +11,7 @@ header.container-fluid
         li.nav-item
           a.nav-link(href='./news.html') Tin tức
         li.nav-item
-          a.nav-link.account-setting(href='' data-toggle="modal" data-target="#signInSignUp") Tài khoản
+          a.nav-link.account-setting(href='' data-toggle="modal" data-target="#signInSignUp")
 
   .content.text-center
       h1.slogan.main-heading.text-uppercase BEST THINGS WITH BEST OFFERS
