--- a/obo-stadium/template/template-parts/shipping-info.pug
+++ b/obo-stadium/template/template-parts/shipping-info.pug
@@ -1,5 +1,5 @@
 #addNewShipping.modal.fade(tabindex='-1', role='dialog', aria-labelledby='addNewShippingLabel', aria-hidden='true')
-  .modal-dialog(role='document')
+  .modal-dialog.modal-dialog-scrollable(role='document')
     .modal-content
       .modal-header
         h5#addNewShippingLabel.modal-title Thêm địa chỉ mới
