fix sign in sign up bugs

--- a/obo-stadium/template/template-parts/login-modal.pug
+++ b/obo-stadium/template/template-parts/login-modal.pug
@@ -23,15 +23,15 @@
 
           #signUp.tab-pane.fade(role='tabpanel' aria-labelledby='signUp-tab')
             form
-              input.form-control.full-name(placeholder="Họ và tên *")
+              input.form-control.sign-up-full-name(placeholder="Họ và tên *")
               .invalid-feedback 
-              input.form-control.phone(placeholder="Số điện thoại *")
+              input.form-control.sign-up-phone(placeholder="Số điện thoại *")
               .invalid-feedback 
-              input.form-control.email(placeholder="Email *")
+              input.form-control.sign-up-email(placeholder="Email *")
               .invalid-feedback 
-              input.form-control.password(type="password" placeholder="Mật khẩu *")
+              input.form-control.sign-up-password(type="password" placeholder="Mật khẩu *")
               .invalid-feedback 
-              input.form-control.confirm-password(type="password" placeholder="Xác nhận mật khẩu *")
+              input.form-control.sign-up-confirm-password(type="password" placeholder="Xác nhận mật khẩu *")
               .invalid-feedback 
               .privacy-confirm
               | Khi bạn nhấn Đăng ký, bạn đã đồng ý thực hiện mọi giao dịch mua bán theo 
