--- a/obo-stadium/template/template-parts/shipping-info.pug
+++ b/obo-stadium/template/template-parts/shipping-info.pug
@@ -20,13 +20,13 @@
         .invalid-feedback 
         textarea.form-control.address(placeholder="Địa chỉ" data-name="Địa chỉ")
         .invalid-feedback 
-        .make-default-wrapper
-          .pretty.p-svg.p-curve
-                  input.filter-checkbox(type='checkbox' name='make-default' id='make-default /')
-                  .state.p-success
-                    svg.svg.svg-icon(viewbox='0 0 20 20')
-                      path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
-                    label.checkbox-label(for='make-default') Đặt làm địa chỉ mặc định
+        //- .make-default-wrapper
+        //-   .pretty.p-svg.p-curve
+        //-           input.filter-checkbox(type='checkbox' name='make-default' id='make-default /')
+        //-           .state.p-success
+        //-             svg.svg.svg-icon(viewbox='0 0 20 20')
+        //-               path(d='M7.629,14.566c0.125,0.125,0.291,0.188,0.456,0.188c0.164,0,0.329-0.062,0.456-0.188l8.219-8.221c0.252-0.252,0.252-0.659,0-0.911c-0.252-0.252-0.659-0.252-0.911,0l-7.764,7.763L4.152,9.267c-0.252-0.251-0.66-0.251-0.911,0c-0.252,0.252-0.252,0.66,0,0.911L7.629,14.566z' style='stroke: white;fill:white;')
+        //-             label.checkbox-label(for='make-default') Đặt làm địa chỉ mặc định
       .modal-footer
         button.btn(type='button', data-dismiss='modal') Huỷ bỏ
         button.btn.btn-primary.red-btn.save(type='button') Lưu
