update some css and payment methods modal

--- a/obo-stadium/css/main.css
+++ b/obo-stadium/css/main.css
@@ -107,6 +107,12 @@ a:hover {
   color: #ffffff;
 }
 
+.modal-sub-title {
+  font-size: 0.75rem;
+  color: #ABACAD;
+  font-weight: normal;
+}
+
 .h2 {
   font-size: 1.625rem;
   margin-bottom: 0px;
