--- a/obo-stadium/sass/main.scss
+++ b/obo-stadium/sass/main.scss
@@ -123,6 +123,12 @@ a {
     }
 }
 
+.modal-sub-title {
+    font-size: $twelve-pixel;
+    color: $text-lighter-white;
+    font-weight: normal;
+}
+
 
 .h2 {
     font-size: $twenty-six-pixel;
