--- a/obo-stadium/template/buy-page.pug
+++ b/obo-stadium/template/buy-page.pug
@@ -90,7 +90,7 @@ block mainContent
   include ./template-parts/size-choose-modal
   include ./template-parts/size-guide-modal
   include ./template-parts/shipping-info
-  
+  include ./template-parts/payment-methods
 
 block footer
   include ./template-parts/footer
@@ -103,5 +103,5 @@ block customizeScript
   script(src="./script/except-home-page.js")
   script(src="./script/size-render.js")
   script(src="./script/size-choose.js")
-  script(src="./script/buy-page.js")
+  script(src="./script/buy-sell-page.js")
   script(src="./script/address-select.js")
