--- a/obo-stadium/css/components/buying/buying-section.css
+++ b/obo-stadium/css/components/buying/buying-section.css
@@ -70,61 +70,111 @@
 }
 #addNewShipping .modal-header,
 #addNewShipping .modal-body,
-#addNewShipping .modal-footer {
+#addNewShipping .modal-footer,
+#paymentMethods .modal-header,
+#paymentMethods .modal-body,
+#paymentMethods .modal-footer {
   padding: 1.875rem;
   padding-bottom: 0px;
 }
 #addNewShipping .modal-header,
-#addNewShipping .modal-footer {
+#addNewShipping .modal-footer,
+#paymentMethods .modal-header,
+#paymentMethods .modal-footer {
   border: 0px;
 }
-#addNewShipping .modal-footer {
+#addNewShipping .modal-footer,
+#paymentMethods .modal-footer {
   padding-bottom: 1.875rem;
 }
-#addNewShipping .nav {
+#addNewShipping .nav,
+#paymentMethods .nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
 }
-#addNewShipping .nav-link {
+#addNewShipping .nav-link,
+#paymentMethods .nav-link {
   border-radius: 0px;
   background-color: #D5D6D6;
   text-align: center;
   padding: 1.25rem 0px;
   text-transform: uppercase;
 }
-#addNewShipping .nav-link.active {
+#addNewShipping .nav-link.active,
+#paymentMethods .nav-link.active {
   background-color: white;
   color: #333333;
 }
-#addNewShipping .tab-pane {
+#addNewShipping .tab-pane,
+#paymentMethods .tab-pane {
   margin: 1.25rem 1.875rem;
 }
 #addNewShipping .form-control,
-#addNewShipping .custom-select {
+#addNewShipping .custom-select,
+#paymentMethods .form-control,
+#paymentMethods .custom-select {
   margin-top: 1.25rem;
 }
-#addNewShipping .form-control:first-child {
+#addNewShipping .form-control:first-child,
+#paymentMethods .form-control:first-child {
   margin-top: 0px;
 }
-#addNewShipping .make-default-wrapper {
+#addNewShipping .make-default-wrapper,
+#paymentMethods .make-default-wrapper {
   margin-top: 1.25rem;
 }
-#addNewShipping .btn {
+#addNewShipping .btn,
+#paymentMethods .btn {
   padding: 0.625rem 3.125rem;
 }
-#addNewShipping .address {
+#addNewShipping .address,
+#paymentMethods .address {
   resize: none;
+}
+#addNewShipping .pivacy-text,
+#paymentMethods .pivacy-text {
+  margin-top: 1.25rem;
+}
+
+#paymentMethods .cvv-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.25rem;
+}
+#paymentMethods .cvv-wrapper .form-control {
+  max-width: 80%;
 }
 
 @media (min-width: 576px) {
   .modal-dialog {
     max-width: 420px;
   }
+
+  #paymentMethods .modal-dialog {
+    max-width: 500px;
+  }
 }
 @media (min-width: 576px) {
   #addNewShipping .modal-dialog-scrollable {
     max-height: calc(100% - 17rem);
+  }
+}
+@media (max-width: 576px) {
+  .cvv-wrapper .form-control {
+    width: 70%;
+  }
+}
+@media (max-width: 320px) {
+  #addNewShipping .btn,
+#paymentMethods .btn {
+    padding: 0.625rem 1.875rem;
+  }
+}
+@media (max-width: 323px) {
+  .address-info-wrapper button {
+    font-size: 0.75rem;
   }
 }
 
