--- a/obo-stadium/sass/components/index/index-newsletter.scss
+++ b/obo-stadium/sass/components/index/index-newsletter.scss
@@ -31,7 +31,7 @@
     }
 
     & .btn-primary {
-        padding: $ten-pixel $thirty-six-pixel;
+        padding: $ten-pixel $thirty-pixel;
     }
 }
 
