--- a/obo-stadium/css/components/payment-methods-modal.css
+++ b/obo-stadium/css/components/payment-methods-modal.css
@@ -1,3 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
+.visa-master-wrapper.added {
+  padding-bottom: 1.875rem;
+  border-bottom: 1px solid #D5D6D6;
+}
 
 /*# sourceMappingURL=payment-methods-modal.css.map */
