--- a/obo-stadium/template/common.pug
+++ b/obo-stadium/template/common.pug
@@ -42,4 +42,5 @@ html(lang="en")
     // Main Js
     script(type="text/javascript" src="./script/main.js")
     script(type="text/javascript" src="./script/account.js")
+    script(src="./data.json")
     block customizeScript
